# miniJVM

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
src/: Makefile  MiniJVM.java  main.cpp
src/cpu/aarch64/: AssemblerAarch64.hpp
src/hotspot/classfile/: ClassFileParser.cpp  ClassFileParser.hpp  ClassFileStream.cpp  ClassFileStream.hpp  ClassLoader.cpp  ClassLoader.hpp  VmSymbols.hpp  constants.hpp
src/hotspot/gc/: CollectedHeap.cpp  CollectedHeap.hpp  GC.cpp  GC.hpp
src/hotspot/interpreter/: BytecodeInterpreter.cpp  BytecodeInterpreter.hpp
src/hotspot/jni/: JNIEnv.cpp  JavaVM.cpp  Java_io_PrintStream.cpp  Java_io_PrintStream.h  Java_lang_System.cpp  Java_lang_System.h  Java_lang_Thread.cpp  Java_lang_Thread.h  Java_native_DarrenThread.cpp  Java_native_DarrenThread.h  jni.h
src/hotspot/oops/: AllStatic.hpp  ConstantPool.cpp  ConstantPool.hpp  FieldInfo.cpp  FieldInfo.hpp  InstanceKClass.cpp  InstanceKClass.hpp  KClass.cpp  KClass.hpp  MarkWord.cpp  MarkWord.hpp  Metadata.cpp  Metadata.hpp  MethodInfo.cpp  MethodInfo.hpp  Oop.cpp  Oop.hpp
src/hotspot/runtime/: Atomic.cpp  Atomic.hpp  BasicLock.cpp  BasicLock.hpp  JavaRunStack.cpp  JavaRunStack.hpp  JavaThread.cpp  JavaThread.hpp  ObjectMonitor.cpp  ObjectMonitor.hpp  ObjectSynchronizer.cpp  ObjectSynchronizer.hpp  SafepointMechanism.cpp  SafepointMechanism.hpp  Signature.cpp  Signature.hpp  (+7 more)
src/java/: DarrenRunnable.java  DarrenThread.java  MiniJVM.java  Student.java
src/javaclass/: MiniJVM.java  Print.java
src/unit/: class_loader_test.cpp  class_loader_test.hpp  minjvm_test.cpp  minjvm_test.hpp
(+9 files in other folders)
